2003-04-24  Biswapesh Chattopadhyay  <biswapesh_chatterjee@tcscal.co.in>
	* src/main_menubar.c: Disable setup dialog.

2003-04-22  Biswapesh Chattopadhyay  <biswapesh_chatterjee@tcscal.co.in>
	* src/breakpoints.c; Fixed compilation with older GCC
	* src/preferences.c: Fixed crash with G_DISABLE_CHECKS
	* HACKING: Spelling fixes (Suggested by Stephen Knight)

2003-04-18  Naba Kumar  <naba@gnome.org>

	* anjuta.prj: Updated (includes compiler options).
	
	* src/anjuta.[hc], src/anjuta-tools.c: Removed redundant get_user_params
	function from anjuta.c (it was already available in anjuta-tools.c).
	
2003-04-18  Naba Kumar  <naba@gnome.org>

	* src/about.c, THANKS: Updated
	
	* anjuta.glade, anjuta_dialogs_strings.c: Updated setup-dialog
	
	* src/an_file_view.c, src/project_dbase.c: Restores file-filters
	properly from the project session before updating the file
	view.
	
	* src/main_menubar_def.h, src/mainmenu_callbacks.[ch],
	an_file_view.[ch], main_menubar.[ch], controls.c: Removed windows
	dialog settings (as it will not be required once GDL is in place) and
	added file view filters in the settings sub-menu.

2003-04-17  Biswapesh Chattopadhyay  <biswapesh_chatterjee@tcscal.co.in>
	* HACKING: Updated
	* configure.in: Disable cast checks on final build.

2003-04-17  Naba Kumar  <naba@gnome.org>

	* src/build_project.c: Fixed a compilation error.

	* src/launcher.c: Removed commnets.
	
	* anjuta.glade, anjuta_dialogs_strings.c: Moved indentation
	properties from editor tab to indentation tab and fixed a property
	label for proper i18n translation. Fixed typos in project config
	dialog (reported by Gaëtan de Menten  <ged@bugfactory.org>). Disabled
	sorting and reordering in compiler options dialog.
	
	* src/compiler_options.c: Implemented _save() function to save the
	options (which was pending).
	
	* src/build_project.c: Destroys install-as-root dialog when it is done.
	
	* src/an_symbol_view.c: Change "event" event to "event-after" so