@@ -52,8 +52,8 @@ project.menu.need.terminal=0
 project.configure.options=
 anjuta.program.arguments=
 preferences.build.option.jobs=0
-preferences.autoformat.custom.style= -i8 -sc -bli0 -bl0 -cbi0 -ss
-preferences.autoformat.style=Style of Kangleipak
+preferences.autoformat.custom.style=-bad -bap -bbb -sob -nbbo -nbc -bl -fca -fc1 -lc78 -d0 -c50 -cd33 -cp10 -sc -ncdb -bl -bli0 -ncdw -cli0 -cbi4 -ss -pcs -cs -bs -saf -sai -saw -di16 -nbfda -psl -brs -i8 -ci4 -lp -ts4 -l78 -nhnl -pmt
+preferences.autoformat.style=Custom style
 preferences.indent.opening=0
 preferences.build.option.silent=0
 preferences.autoformat.disable=0
@@ -68,8 +68,8 @@ preferences.build.option.keep.going=0
 preferences.indent.closing=0
 preferences.build.option.warn.undef=0
 preferences.build.option.jobs=0
-preferences.autoformat.custom.style= -i8 -sc -bli0 -bl0 -cbi0 -ss
-preferences.autoformat.style=Style of Kangleipak
+preferences.autoformat.custom.style=-bad -bap -bbb -sob -nbbo -nbc -bl -fca -fc1 -lc78 -d0 -c50 -cd33 -cp10 -sc -ncdb -bl -bli0 -ncdw -cli0 -cbi4 -ss -pcs -cs -bs -saf -sai -saw -di16 -nbfda -psl -brs -i8 -ci4 -lp -ts4 -l78 -nhnl -pmt
+preferences.autoformat.style=Custom style
 preferences.indent.opening=0
 preferences.build.option.silent=0
 preferences.autoformat.disable=0
@@ -84,8 +84,8 @@ preferences.build.option.keep.going=0
 preferences.indent.closing=0
 preferences.build.option.warn.undef=0
 preferences.build.option.jobs=0
-preferences.autoformat.custom.style= -i8 -sc -bli0 -bl0 -cbi0 -ss
-preferences.autoformat.style=Style of Kangleipak
+preferences.autoformat.custom.style=-bad -bap -bbb -sob -nbbo -nbc -bl -fca -fc1 -lc78 -d0 -c50 -cd33 -cp10 -sc -ncdb -bl -bli0 -ncdw -cli0 -cbi4 -ss -pcs -cs -bs -saf -sai -saw -di16 -nbfda -psl -brs -i8 -ci4 -lp -ts4 -l78 -nhnl -pmt
+preferences.autoformat.style=Custom style
 preferences.indent.opening=0
 preferences.build.option.silent=0
 preferences.autoformat.disable=0
@@ -100,8 +100,8 @@ preferences.build.option.keep.going=0
 preferences.indent.closing=0
 preferences.build.option.warn.undef=0
 preferences.build.option.jobs=0
-preferences.autoformat.custom.style= -i8 -sc -bli0 -bl0 -cbi0 -ss
-preferences.autoformat.style=Style of Kangleipak
+preferences.autoformat.custom.style=-bad -bap -bbb -sob -nbbo -nbc -bl -fca -fc1 -lc78 -d0 -c50 -cd33 -cp10 -sc -ncdb -bl -bli0 -ncdw -cli0 -cbi4 -ss -pcs -cs -bs -saf -sai -saw -di16 -nbfda -psl -brs -i8 -ci4 -lp -ts4 -l78 -nhnl -pmt
+preferences.autoformat.style=Custom style
 preferences.indent.opening=0
 preferences.build.option.silent=0
 preferences.autoformat.disable=0
@@ -116,8 +116,8 @@ preferences.build.option.keep.going=0
 preferences.indent.closing=0
 preferences.build.option.warn.undef=0
 preferences.build.option.jobs=0
-preferences.autoformat.custom.style= -i8 -sc -bli0 -bl0 -cbi0 -ss
-preferences.autoformat.style=Style of Kangleipak
+preferences.autoformat.custom.style=-bad -bap -bbb -sob -nbbo -nbc -bl -fca -fc1 -lc78 -d0 -c50 -cd33 -cp10 -sc -ncdb -bl -bli0 -ncdw -cli0 -cbi4 -ss -pcs -cs -bs -saf -sai -saw -di16 -nbfda -psl -brs -i8 -ci4 -lp -ts4 -l78 -nhnl -pmt
+preferences.autoformat.style=Custom style
 preferences.indent.opening=0
 preferences.build.option.silent=0
 preferences.autoformat.disable=0
@@ -132,8 +132,8 @@ preferences.build.option.keep.going=0
 preferences.indent.closing=0
 preferences.build.option.warn.undef=0
 preferences.build.option.jobs=0
-preferences.autoformat.custom.style= -i8 -sc -bli0 -bl0 -cbi0 -ss
-preferences.autoformat.style=Style of Kangleipak
+preferences.autoformat.custom.style=-bad -bap -bbb -sob -nbbo -nbc -bl -fca -fc1 -lc78 -d0 -c50 -cd33 -cp10 -sc -ncdb -bl -bli0 -ncdw -cli0 -cbi4 -ss -pcs -cs -bs -saf -sai -saw -di16 -nbfda -psl -brs -i8 -ci4 -lp -ts4 -l78 -nhnl -pmt
+preferences.autoformat.style=Custom style
 preferences.indent.opening=0
 preferences.build.option.silent=0
 preferences.autoformat.disable=0
@@ -148,8 +148,8 @@ preferences.build.option.keep.going=0
 preferences.indent.closing=0
 preferences.build.option.warn.undef=0
 preferences.build.option.jobs=0
-preferences.autoformat.custom.style= -i8 -sc -bli0 -bl0 -cbi0 -ss
-preferences.autoformat.style=Style of Kangleipak
+preferences.autoformat.custom.style=-bad -bap -bbb -sob -nbbo -nbc -bl -fca -fc1 -lc78 -d0 -c50 -cd33 -cp10 -sc -ncdb -bl -bli0 -ncdw -cli0 -cbi4 -ss -pcs -cs -bs -saf -sai -saw -di16 -nbfda -psl -brs -i8 -ci4 -lp -ts4 -l78 -nhnl -pmt
+preferences.autoformat.style=Custom style
 preferences.indent.opening=0
 preferences.build.option.silent=0
 preferences.autoformat.disable=0
