@@ -1,18 +1,8 @@
-
-                   =================
-                   ||   WELCOME   ||
-                   =================
-     *************************************************
-                Anjuta IDE Version @VERSION@
-       Copyright (C) 2000-2002 Kh. Naba Kumar Singh. 
-     *************************************************
-
-So this is the first time you are using the Anjuta IDE.
-Before you start, please read the following:
+Anjuta IDE Version @VERSION@
+Copyright (C) Naba Kumar
 
 This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version. 
 
 This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details. 
 
-You should have received a copy of the GNU General Public License along with this program; if not, write to the Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA 
-
+You should have received a copy of the GNU General Public License along with this program; if not, write to the Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
